crates/diffler/src/ui/snapshots/diffler__ui__status__tests__which_key_branch_panel_renders_after_the_reveal_tick.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" Hint: c commit  b branch  s stage  x discard  ? help                                                                   "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
"                                                                                                                        "
" ▾ Untracked (1) +1 -0                                                                                                  "
" ○ todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
" ● src/lib.rs +1 -1                                                                                                     "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
" + ci.yml +1 -0                                                                                                         "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Branch ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" Switch and create                                                                                                      "
" b  Checkout branch                                                                                                     "
" c  Create and checkout                                                                                                 "
" n  Create                                                                                                              "
" D  Delete                                                                                                              "
" p  Pull requests                                                                                                       "
" P  Open a pull request                                                                                                 "
