crates/diffler/src/ui/snapshots/diffler__ui__status__tests__which_key_commit_panel_renders_after_the_reveal_tick.snap
---
source: crates/diffler/src/ui/status.rs
expression: render(&mut app).backend()
---
" c commit · b branch · s stage · x discard · ? help                                                                     "
" Head:     main c1ac28f initial commit                                                                                  "
" Changes   +3 -1  █████                                                                                                 "
"                                                                                                                        "
"▌▾ Untracked (1) +1 -0                                                                                                  "
" ○ todo.md +1 -0                                                                                                        "
"                                                                                                                        "
" ▾ Unstaged changes (1) +1 -1                                                                                           "
" ● src/lib.rs +1 -1                                                                                                     "
"                                                                                                                        "
" ▾ Staged changes (1) +1 -0                                                                                             "
" + ci.yml +1 -0                                                                                                         "
"                                                                                                                        "
" ▸ Recent commits (1)                                                                                                   "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" Commit ────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" Create                                                                                                                 "
" c  Commit                                                                                                              "
" e  Extend                                                                                                              "
" a  Amend                                                                                                               "
" w  Reword                                                                                                              "
